# alembic-consistency

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
src/alembic_consistency/: consistency_check.py  consistency_hook.py  parse_migrations.py
tests/: test_cases.py  test_consistency_check.py  test_parse_migrations.py
tests/cases/ambiguous_successor/: 2024_12_26_2200-c1d8e6f4b2a7_create_villains_table.py
tests/cases/inconsistent_script/: 2024_12_25_2100-b9e5c2f3a7d8_create_heros_table.py
tests/cases/inconsistent_start_script/: 2024_12_24_2000-a8f4b7e2c1d6_create_superhero_schema.py
tests/cases/vanilla/: 2024_12_24_2000-a8f4b7e2c1d6_create_superhero_schema.py
tests/cases/vanilla_wrong_file_ordering/: 1_2024_12_25_2100-b9e5c2f3a7d8_create_heros_table.py  3_2024_12_26_2200-c1d8e6f4b2a7_create_villains_table.py
